seções titulo, portfolio e contato adicionadas

--- a/index.html
+++ b/index.html
@@ -13,29 +13,58 @@
 
     </head>
     <body>
+        <!-- fazer a header acompanhar a rolagem da pagina com js-->
         <header>
             <div class="fundo-navegação">
-                <nav>
+                <nav> 
+                    <a class="squad-11" href="#topo-pagina">Squad 11</a>
                     <ul>
-                        <li> <a href="#sobre"> Sobre </a></li>
-                        <li> <a href="#portfolio"> Portfolio</a></li>
-                        <li> <a href="#contato"> Contato</a></li>
+                        <li> <a class="link" href="#sobre"> Sobre </a></li>
+                        <li> <a class="link" href="#portfolio"> Portfolio</a></li>
+                        <li> <a class="link" href="#contato"> Contato</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
+        
+        <div class="fundo-squad">
+            <section id="topo-pagina">
+                <div class="icone da pagina">
+                    <!-- fazer um ícone melhor pra representar o squad -->
+                    <img id="icone" src="circulo.png"> <!-- imagem teste -->
+                </div>
+
+                <div class="informacoes">
+                    <p>#TeuFuturo | IMED</p>
+                </div>
+            </section>
+        </div>
+
         <main>
+            <div class="fundo-portfolio">
+                <section id="portfolio">
+                    <h1 class="titulo">Portfólio</h1>
+                    <!-- colocar os ícones pras três páginas-->
+                </section>
+            </div>
             <div class="fundo-sobre">
-                <section class="sobre">
-                    <h2 class="titulo-sobre">Sobre</h2>
+                <section id="sobre">
+                    <h2 class="titulo">Sobre</h2>
                     <img class="foto-perfil-1" src="imagem-perfil/ale.jpg">
-                    <p> "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis aspernatur deserunt natus molestiae, eum fugiat provident laboriosam! Consequuntur a quaerat vero architecto unde officiis impedit nesciunt neque, maxime maiores.</p>
-                    <img class="foto-perfil-2" src="imagem-perfil/ale.jpg"> <!-- botar foto da duda -->
-                    <p> "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis aspernatur deserunt natus molestiae, eum fugiat provident laboriosam! Consequuntur a quaerat vero architecto unde officiis impedit nesciunt neque, maxime maiores.</p>
+                    <p id="sobre-ale"> "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis aspernatur deserunt natus molestiae, eum fugiat provident laboriosam! Consequuntur a quaerat vero architecto unde officiis impedit nesciunt neque, maxime maiores.</p>
+                    <img class="foto-perfil-2" src="imagem-perfil/duda.jpg">
+                    <p id="sobre-duda"> "Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum perferendis aspernatur deserunt natus molestiae, eum fugiat provident laboriosam! Consequuntur a quaerat vero architecto unde officiis impedit nesciunt neque, maxime maiores.</p>
                 </section>
             </div>
         </main>
+
+        <div class="fundo-contato">
+            <section id="contato">
+                <h3 class="titulo">Contato</h3>
+                
+            </section>
+        </div>
 
         <!-- para adicionar mais tarde
         <footer>
