conteudos do portfolio separados

--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@
                     <ul class="topo-menu-invisivel">
                         <li><button onclick="mostraMenu()" class="botao-menu" type="menu">Menu</button>
                             <menu class="opcoes-menu">
-                                <li><a class="link" href="#portfolio"> Portfólio</a>
-                                    <!--<ul class="conteudos-menu">
-                                        <li><a href="jogos-classicos.html">Jogos Clássicos</a></li>
-                                        <li><a href="logica-programacao.html">Lógica de Programação</a></li>
-                                        <li><a href="linguagem-web.html">Programação em Linguagem Web</a></li>
-                                        <li><a href="html-css.html">HTML e CSS</a></li>
-                                    </ul>-->
-                                </li>
+                                <li><a class="link" id="opcao-portfolio" href="#portfolio"> Portfólio</a></li>
                                 <li> <a class="link" href="#sobre"> Sobre </a></li>
                                 <li> <a class="link" href="#contato"> Contato</a></li>
                             </menu>
@@ -55,7 +48,27 @@
             <div class="fundo-portfolio">
                 <section id="portfolio">
                     <h1 class="titulo">Portfólio</h1>
-                    <!-- colocar os ícones pras três páginas-->
+                    <p>Confira os conteúdos que foram estudados e as atividades que foram realizadas pelo Squad 11 no curso do programa #TeuFuturo.</p>
+                    <!-- colocar os ícones pras páginas-->
+                    <ul id="conteudos-portfolio">
+                        <!--fazer modificação no js pro conteudo de cada li aparecer só quando ela for clicada-->
+                            <li><span>Jogos Clássicos</span>
+                                <!--imagem exibição-->
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at quam dui. Pellentesque at urna vulputate, convallis odio sit amet, ullamcorper nulla. Pellentesque ut condimentum libero.</p>
+                            </li> 
+                            <li><span>Lógica de Programação</span>
+                                <!--imagem exibição-->
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at quam dui. Pellentesque at urna vulputate, convallis odio sit amet, ullamcorper nulla. Pellentesque ut condimentum libero.</p>
+                            </li>
+                            <li><span>Programação em Linguagem Web</span>
+                                <!--imagem exibição-->
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at quam dui. Pellentesque at urna vulputate, convallis odio sit amet, ullamcorper nulla. Pellentesque ut condimentum libero.</p>
+                            </li>
+                            <li><span>HTML e CSS</span>
+                                <!--imagem exibição-->
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at quam dui. Pellentesque at urna vulputate, convallis odio sit amet, ullamcorper nulla. Pellentesque ut condimentum libero.</p>
+                            </li>
+                    </ul>
                 </section>
             </div>
             <div class="fundo-sobre">
